<resources>
    <string name="app_name">My Github User</string>
    <string name="search_user">Search User…</string>
    <string name="followers">%d\nFollowers</string>
    <string name="following">%d\nFollowing</string>
    <string name="user_id">User ID : %d</string>
    <string name="connection_error">Connection Error</string>
    <string name="unknown">Unknown</string>
    <string name="not_mentioned">Not mentioned</string>
    <string name="double_tap_to_exit">Please click again to exit</string>
    <string name="no_result_found">No Result Found</string>

    <plurals name="plural_repository">
        <item quantity="one">%d\nRepository</item>
        <item quantity="other">%d\nRepositories</item>
    </plurals>

    <string name="tab_title_1">Following</string>
    <string name="tab_title_2">Followers</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="data_not_available">Nothing to show</string>
    <string name="marked_favorite">Marked as Favorite</string>
    <string name="removed_favorite">Removed as Favorite</string>
    <string name="fav_users_title">Favorite Users</string>

    <string name="key_reminder" translatable="false">key_reminder</string>
    <string name="key_language" translatable="false">key_language</string>
    <string name="language">Language</string>
    <string name="reminder">Reminder at 09:00</string>
    <string name="my_preference_name" translatable="false">util_preference</string>
    <string name="reminder_time" translatable="false">09:00</string>

    <string name="reminder_message">Let\'s find popular user on Github!</string>
    <string name="reminder_enabled">Reminder set up</string>
    <string name="reminder_disabled">Reminder is off</string>
    <string name="reminder_title">Reminder</string>

    <string name="empty_text">No Data</string>
    <string name="appwidget_text">My Github Favorites</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="key_theme" translatable="false">key_theme</string>
    <string name="dark_mode_auto">Dark Mode Automatic</string>
    <string name="dark_mode_on">Dark Mode On</string>
</resources>