<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:iconSpaceReserved="false">
    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_notifications_active"
        android:key="@string/key_reminder"
        android:switchTextOff="Off"
        android:switchTextOn="On"
        android:title="@string/reminder"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_palette"
        android:key="@string/key_theme"
        android:summaryOff="@string/dark_mode_auto"
        android:summaryOn="@string/dark_mode_on"
        android:title="@string/dark_mode"
        app:iconSpaceReserved="false" />

    <Preference
        android:icon="@drawable/ic_language"
        android:key="@string/key_language"
        android:title="@string/language"
        app:iconSpaceReserved="false"
        tools:summary="English" />
</PreferenceScreen>